Adiciona criterio carne

--- a/public/index.html
+++ b/public/index.html
@@ -133,6 +133,7 @@
         { key: 'variedade', label: 'Variedade' },
         { key: 'sabor',     label: 'Sabor'     },
         { key: 'qualidade', label: 'Qualidade' },
+        { key: 'carne',     label: 'Carne'     },
         { key: 'sobremesa', label: 'Sobremesa' },
         { key: 'atendimento', label: 'Atendimento' }
       ];
