--- a/public/resumo.html
+++ b/public/resumo.html
@@ -96,7 +96,7 @@
 
     (function(){
       const criteriaLabels = [
-        'Variedade','Sabor','Qualidade','Sobremesa','Atendimento'
+        'Variedade','Sabor','Qualidade','Carne', 'Sobremesa','Atendimento'
       ];
       const btnHoje      = document.getElementById('btnHoje');
       const btnAcumulado = document.getElementById('btnAcumulado');
