--- a/public/resumo.html
+++ b/public/resumo.html
@@ -74,7 +74,11 @@
     /**
      * Insere comentários na <ul> da seção (hoje ou acumulado).
      * Espera que `/api/comentarios` retorne:
-     *   { comments: [ { date: "YYYY-MM-DD", comment: "..." }, … ] }
+    *   {
+    *     comments: [
+    *       { _id, date: "YYYY-MM-DD", comment: "...", likes, dislikes }, …
+    *     ]
+    *   }
      */
     function loadComments(section, start, end) {
       const params = (start && end)
@@ -87,8 +91,16 @@
           ul.innerHTML = '';
           data.comments.forEach(item => {
             const li = document.createElement('li');
-            li.className = 'list-group-item';
-            li.textContent = `${item.date}: ${item.comment}`;
+            li.className = 'list-group-item d-flex justify-content-between align-items-start';
+
+            const span = document.createElement('span');
+            span.textContent = `${item.date}: ${item.comment}`;
+            li.appendChild(span);
+
+            const counts = document.createElement('span');
+            counts.textContent = `👍 ${item.likes} / 👎 ${item.dislikes}`;
+            li.appendChild(counts);
+
             ul.appendChild(li);
           });
         });
