--- a/public/resumo.html
+++ b/public/resumo.html
@@ -40,6 +40,17 @@
       <p><strong>Total de votos:</strong> <span id="countHoje">0</span></p>
 
       <h3 class="mt-4">Comentários de Hoje</h3>
+      <form class="row g-2 mb-3 filter-form">
+        <div class="col-auto">
+          <input type="text" class="form-control filter-text" placeholder="Buscar texto" />
+        </div>
+        <div class="col-auto">
+          <input type="number" class="form-control filter-likes" placeholder="Mín. likes" min="0" />
+        </div>
+        <div class="col-auto">
+          <button class="btn btn-secondary">Filtrar</button>
+        </div>
+      </form>
       <ul class="list-group"><!-- comentários serão inseridos aqui --></ul>
     </div>
 
@@ -66,6 +77,17 @@
       <p><strong>Total de votos:</strong> <span id="countAcumulado">0</span></p>
 
       <h3 class="mt-4">Comentários Acumulados</h3>
+      <form class="row g-2 mb-3 filter-form">
+        <div class="col-auto">
+          <input type="text" class="form-control filter-text" placeholder="Buscar texto" />
+        </div>
+        <div class="col-auto">
+          <input type="number" class="form-control filter-likes" placeholder="Mín. likes" min="0" />
+        </div>
+        <div class="col-auto">
+          <button class="btn btn-secondary">Filtrar</button>
+        </div>
+      </form>
       <ul class="list-group"><!-- comentários serão inseridos aqui --></ul>
     </div>
   </div><!-- fecha .container -->
@@ -80,11 +102,18 @@
     *     ]
     *   }
      */
-    function loadComments(section, start, end) {
-      const params = (start && end)
-        ? `?start=${start}&end=${end}`
-        : '';
-      fetch('/api/comentarios' + params)
+    function loadComments(section, start, end, q, minLikes) {
+      if (start !== undefined) section.dataset.start = start || '';
+      if (end !== undefined) section.dataset.end = end || '';
+
+      const params = new URLSearchParams();
+      start = section.dataset.start; end = section.dataset.end;
+      if (start && end) { params.append('start', start); params.append('end', end); }
+      if (q) params.append('q', q);
+      if (minLikes) params.append('minLikes', minLikes);
+
+      const qs = params.toString() ? '?' + params.toString() : '';
+      fetch('/api/comentarios' + qs)
         .then(r => r.json())
         .then(data => {
           const ul = section.querySelector('ul.list-group');
@@ -116,6 +145,18 @@
       const secAcumulado = document.getElementById('secAcumulado');
       let chartHoje, chartAcum;
 
+      document.querySelectorAll('.filter-form').forEach(form => {
+        form.addEventListener('submit', e => {
+          e.preventDefault();
+          const section = form.closest('div');
+          const q = form.querySelector('.filter-text').value;
+          const likes = form.querySelector('.filter-likes').value;
+          const start = section.dataset.start || null;
+          const end   = section.dataset.end || null;
+          loadComments(section, start, end, q, likes);
+        });
+      });
+
       function toggleMode(isHoje) {
         btnHoje.classList.toggle('active', isHoje);
         btnAcumulado.classList.toggle('active', !isHoje);
@@ -133,7 +174,10 @@
           .then(data => {
             document.getElementById('countHoje').textContent = data.count;
             renderChart('chartHoje', data.avg, chartHoje, c => chartHoje = c);
-            loadComments(secHoje, null, null);
+            const formFilter = secHoje.querySelector('.filter-form');
+            const q = formFilter.querySelector('.filter-text').value;
+            const likes = formFilter.querySelector('.filter-likes').value;
+            loadComments(secHoje, null, null, q, likes);
           });
       }
 
@@ -189,7 +233,10 @@
             .then(data => {
               document.getElementById('countAcumulado').textContent = data.count;
               renderChart('chartAcumulado', data.avg, chartAcum, c => chartAcum = c);
-              loadComments(secAcumulado, start, end);
+              const formFilter = secAcumulado.querySelector('.filter-form');
+              const q = formFilter.querySelector('.filter-text').value;
+              const likes = formFilter.querySelector('.filter-likes').value;
+              loadComments(secAcumulado, start, end, q, likes);
             });
         });
 
