--- a/public/resumo.html
+++ b/public/resumo.html
@@ -40,17 +40,37 @@
       <p><strong>Total de votos:</strong> <span id="countHoje">0</span></p>
 
       <h3 class="mt-4">Comentários de Hoje</h3>
-      <form class="row g-2 mb-3 filter-form">
-        <div class="col-auto">
-          <input type="text" class="form-control filter-text" placeholder="Buscar texto" />
-        </div>
-        <div class="col-auto">
-          <input type="number" class="form-control filter-likes" placeholder="Mín. likes" min="0" />
-        </div>
-        <div class="col-auto">
-          <button class="btn btn-secondary">Filtrar</button>
-        </div>
-      </form>
+      <form class="row g-2 mb-3 filter-form" aria-label="Formulário de filtro de comentários">
+  <div class="col-auto d-flex align-items-center">
+    <label for="search-comments" class="me-2 fw-semibold">Comentários</label>
+    <input
+      id="search-comments"
+      type="text"
+      class="form-control filter-text"
+      placeholder="Buscar texto"
+      style="transition: box-shadow .3s, color .3s;"
+      onfocus="this.style.boxShadow='0 0 0 .2rem rgba(13,110,253,.25)'; this.previousElementSibling.style.color='#0d6efd'"
+      onblur="this.style.boxShadow='none'; this.previousElementSibling.style.color=''"
+    />
+  </div>
+  <div class="col-auto d-flex align-items-center">
+    <label for="min-likes" class="me-2 fw-semibold">Min Likes</label>
+    <input
+      id="min-likes"
+      type="number"
+      class="form-control filter-likes"
+      placeholder="Mín. likes"
+      min="0"
+      style="transition: box-shadow .3s, color .3s;"
+      onfocus="this.style.boxShadow='0 0 0 .2rem rgba(13,110,253,.25)'; this.previousElementSibling.style.color='#0d6efd'"
+      onblur="this.style.boxShadow='none'; this.previousElementSibling.style.color=''"
+    />
+  </div>
+  <div class="col-auto d-flex align-items-center">
+    <button type="submit" class="btn btn-secondary">Filtrar</button>
+  </div>
+</form>
+
       <ul class="list-group"><!-- comentários serão inseridos aqui --></ul>
     </div>
 
