--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <!-- Bootstrap JS for navbar -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   <style>
     /* Slider base */
@@ -90,7 +92,33 @@
   </style>
 </head>
 <body class="bg-light">
-  <div></div>
+<header>
+  <!-- estilo local, pode ficar aqui mesmo -->
+  <style>
+    /* escolhi #607d8b (azul-acinzentado), mas você pode trocar pelo hex que quiser */
+    .navbar-azul-acinzentado {
+      background-color: #607d8b;
+    }
+  </style>
+
+  <nav class="navbar navbar-expand-lg navbar-dark navbar-azul-acinzentado">
+    <div class="container">
+      <a class="navbar-brand" href="/">Almoço</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+              data-bs-target="#menuNavbar" aria-controls="menuNavbar"
+              aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="menuNavbar">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="/">Início</a></li>
+          <li class="nav-item"><a class="nav-link" href="/resumo">Resumo</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+
   <div class="container py-5">
     <h1 class="mb-4">Como estava o almoço hoje?</h1>
     <span class="mb-4">Você só pode votar uma vez ao dia!</span>
