--- a/public/resumo.html
+++ b/public/resumo.html
@@ -9,6 +9,8 @@
     rel="stylesheet"
   />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <!-- Bootstrap JS for navbar -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   <style>
     .chart-container {
@@ -22,6 +24,32 @@
   </style>
 </head>
 <body class="bg-light">
+<header>
+  <!-- estilo local, pode ficar aqui mesmo -->
+  <style>
+    /* escolhi #607d8b (azul-acinzentado), mas você pode trocar pelo hex que quiser */
+    .navbar-azul-acinzentado {
+      background-color: #607d8b;
+    }
+  </style>
+
+  <nav class="navbar navbar-expand-lg navbar-dark navbar-azul-acinzentado">
+    <div class="container">
+      <a class="navbar-brand" href="/">Almoço</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+              data-bs-target="#menuNavbar" aria-controls="menuNavbar"
+              aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="menuNavbar">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="/">Início</a></li>
+          <li class="nav-item"><a class="nav-link" href="/resumo">Resumo</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
   <div class="container py-5">
     <h1 class="mb-4">Resumo de Votos</h1>
 
