--- a/public/resumo.html
+++ b/public/resumo.html
@@ -293,5 +293,15 @@
       loadHoje();
     })();
   </script>
+  <footer class="text-center mt-4">
+    Versão <span id="appVersion"></span>
+  </footer>
+  <script>
+    fetch('/api/version')
+      .then(r => r.json())
+      .then(d => {
+        document.getElementById('appVersion').textContent = d.version;
+      });
+  </script>
 </body>
 </html>
