--- a/public/index.html
+++ b/public/index.html
@@ -3,95 +3,19 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Votação do Almoço</title>
+  <title>Avaliação da Qualidade do Almoço</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <!-- Bootstrap Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
+  <!-- Custom styles -->
+  <link rel="stylesheet" href="/style.css"/>
   <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <!-- Bootstrap JS for navbar -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-  <style>
-    /* Slider base */
-    input[type="range"] {
-      -webkit-appearance: none;
-      width: 100%;
-      margin: 1rem 0;
-      background: transparent;
-    }
-    /* Track */
-    input[type="range"]::-webkit-slider-runnable-track {
-      width: 100%;
-      height: 8px;
-      background: #ddd;
-      border-radius: 4px;
-      transition: background 0.3s;
-    }
-    input[type="range"]::-moz-range-track {
-      width: 100%;
-      height: 8px;
-      background: #ddd;
-      border-radius: 4px;
-    }
-    /* Thumb */
-    input[type="range"]::-webkit-slider-thumb {
-      -webkit-appearance: none;
-      width: 16px;
-      height: 16px;
-      background: #0d6efd;
-      border: 2px solid #fff;
-      border-radius: 50%;
-      box-shadow: 0 0 2px rgba(0,0,0,0.5);
-      margin-top: -4px;
-      cursor: pointer;
-      transition: background 0.2s, transform 0.2s;
-    }
-    input[type="range"]::-moz-range-thumb {
-      width: 16px;
-      height: 16px;
-      background: #0d6efd;
-      border: 2px solid #fff;
-      border-radius: 50%;
-      box-shadow: 0 0 2px rgba(0,0,0,0.5);
-      cursor: pointer;
-      transition: background 0.2s, transform 0.2s;
-    }
-    /* Hover & focus */
-    input[type="range"]:hover::-webkit-slider-thumb,
-    input[type="range"]:focus::-webkit-slider-thumb {
-      background: #0b5ed7;
-      transform: scale(1.2);
-    }
-    input[type="range"]:hover::-moz-range-thumb,
-    input[type="range"]:focus::-moz-range-thumb {
-      background: #0b5ed7;
-      transform: scale(1.2);
-    }
-    input[type="range"]:focus {
-      outline: none;
-    }
-    /* Gradient fill until value (WebKit only) */
-    input[type="range"]::-webkit-slider-runnable-track {
-      background: linear-gradient(
-        to right,
-        #0d6efd 0%,
-        #0d6efd calc((var(--value) - 1) / 4 * 100%),
-        #ddd calc((var(--value) - 1) / 4 * 100%),
-        #ddd 100%
-      );
-    }
-        /* Labels below range slider */
-    .range-labels {
-      display: flex;
-      justify-content: space-between;
-      font-size: 0.75rem;
-      margin-top: -0.25rem;
-      padding: 0 2px;
-      pointer-events: none;
-    }
-  </style>
 </head>
-<body class="bg-light">
+<body>
 <header>
   <!-- estilo local, pode ficar aqui mesmo -->
   <style>
@@ -103,7 +27,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark navbar-azul-acinzentado">
     <div class="container">
-      <a class="navbar-brand" href="/">Almoço</a>
+      <a class="navbar-brand" href="/"><i class="bi bi-egg-fried me-1"></i>Qualidade do Almoço</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
               data-bs-target="#menuNavbar" aria-controls="menuNavbar"
               aria-expanded="false" aria-label="Toggle navigation">
@@ -120,7 +44,7 @@
 </header>
 
   <div class="container py-5">
-    <h1 class="mb-4">Como estava o almoço hoje?</h1>
+    <h1 class="mb-4">Como estava a qualidade do almoço hoje?</h1>
     <span class="mb-4">Você só pode votar uma vez ao dia!</span>
 
     <div id="form-container">
@@ -158,12 +82,12 @@
 
     (function(){
       const criteria = [
-        { key: 'variedade', label: 'Variedade' },
-        { key: 'sabor',     label: 'Sabor'     },
-        { key: 'qualidade', label: 'Qualidade' },
-        { key: 'carne',     label: 'Carne'     },
-        { key: 'sobremesa', label: 'Sobremesa' },
-        { key: 'atendimento', label: 'Atendimento' }
+        { key: 'variedade',   label: 'Variedade',   icon: 'bi-list-stars' },
+        { key: 'sabor',       label: 'Sabor',       icon: 'bi-emoji-smile' },
+        { key: 'qualidade',   label: 'Qualidade',   icon: 'bi-award' },
+        { key: 'carne',       label: 'Carne',       icon: 'bi-egg-fried' },
+        { key: 'sobremesa',   label: 'Sobremesa',   icon: 'bi-cup-straw' },
+        { key: 'atendimento', label: 'Atendimento', icon: 'bi-people' }
       ];
       const hoje = new Date().toISOString().slice(0,10);
       if (localStorage.getItem('votoDate') !== hoje) {
@@ -180,7 +104,7 @@
         div.className = 'mb-3';
         div.innerHTML = `
           <label class="form-label" style="display:block; margin-bottom:.25rem;">
-            ${c.label}: <span id="${c.key}Value">3</span>
+            <i class="bi ${c.icon} me-1"></i>${c.label}: <span id="${c.key}Value">3</span>
           </label>
 		  <input type="range" class="form-range" min="1" max="5" value="3" id="${c.key}" aria-valuemin="1" aria-valuemax="5" aria-valuenow="3" aria-label="${c.label}" />
           <div class="range-labels" aria-hidden="true">
