--- a/public/resumo.html
+++ b/public/resumo.html
@@ -3,11 +3,15 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Resumo de Votos</title>
+  <title>Resumo da Qualidade do Almoço</title>
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     rel="stylesheet"
   />
+  <!-- Bootstrap Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
+  <!-- Custom styles -->
+  <link rel="stylesheet" href="/style.css"/>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <!-- Bootstrap JS for navbar -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -23,7 +27,7 @@
     }
   </style>
 </head>
-<body class="bg-light">
+<body>
 <header>
   <!-- estilo local, pode ficar aqui mesmo -->
   <style>
@@ -35,7 +39,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark navbar-azul-acinzentado">
     <div class="container">
-      <a class="navbar-brand" href="/">Almoço</a>
+      <a class="navbar-brand" href="/"><i class="bi bi-egg-fried me-1"></i>Qualidade do Almoço</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
               data-bs-target="#menuNavbar" aria-controls="menuNavbar"
               aria-expanded="false" aria-label="Toggle navigation">
@@ -51,7 +55,7 @@
   </nav>
 </header>
   <div class="container py-5">
-    <h1 class="mb-4">Resumo de Votos</h1>
+    <h1 class="mb-4">Resumo da Qualidade do Almoço</h1>
 
     <!-- Botões de alternância -->
     <div class="btn-group mb-4">
